--- a/homepage_1.html
+++ b/homepage_1.html
@@ -111,7 +111,7 @@ https://templatemo.com/tm-568-digimedia
                 <div class="row">
                   <div class="col-lg-12">
                     <h6>AdaptAI</h6>
-                    <h2>We Boost Your Website Traffic</h2>
+                    <h2>We Provide Tailored AI Solutions for your Business</h2>
                     <p>In a world where innovation meets ambition, Adapt AI emerges as a trailblazer, igniting revolution in how businesses operate and individuals learn.</p>
                   </div>
                   <div class="col-lg-12">
@@ -221,7 +221,7 @@ https://templatemo.com/tm-568-digimedia
         <div class="col-lg-12">
           <div class="section-heading  wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
             <h6>Our Services</h6>
-            <h4>What Our Agency <em>Provides</em></h4>
+            <h4>Our Bold <em>Objectives</em></h4>
             <div class="line-dec"></div>
           </div>
         </div>
@@ -234,31 +234,25 @@ https://templatemo.com/tm-568-digimedia
                     <div class="first-thumb active">
                       <div class="thumb">
                         <span class="icon"><img src="assets/images/service-icon-01.png" alt=""></span>
-                        Apartments
+                        <p><b>AI Innovations</b></p>
                       </div>
                     </div>
                     <div>
                       <div class="thumb">                 
                         <span class="icon"><img src="assets/images/service-icon-02.png" alt=""></span>
-                        Food &amp; Life
+                        <p><b>MarTech &amp; AdTech</b></p>
                       </div>
                     </div>
                     <div>
                       <div class="thumb">                 
                         <span class="icon"><img src="assets/images/service-icon-03.png" alt=""></span>
-                        Cars
+                        <p><b>Learning &amp; User Enablement</b></p>
                       </div>
                     </div>
                     <div>
                       <div class="thumb">                 
                         <span class="icon"><img src="assets/images/service-icon-04.png" alt=""></span>
-                        Shopping
-                      </div>
-                    </div>
-                    <div class="last-thumb">
-                      <div class="thumb">                 
-                        <span class="icon"><img src="assets/images/service-icon-01.png" alt=""></span>
-                        Traveling
+                        <p><b>Mentorship</b></p>
                       </div>
                     </div>
                   </div>
@@ -271,9 +265,10 @@ https://templatemo.com/tm-568-digimedia
                           <div class="row">
                             <div class="col-lg-6 align-self-center">
                               <div class="left-text">
-                                <h4>SEO Analysis &amp; Daily Reports</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt ut labore et dolore kengan darwin doerski token.
-                                  dover lipsum lorem and the others.</p>
+                                <h4>AI Innovations for Businesses</h4>
+                                <p>Turning AI into an ally for business excellence. From seamless chatbots to memorable
+                                  user experiences and powerful generative AI, we create solutions that redefine what’s
+                                  possible.</p>
                                 <div class="ticks-list"><span><i class="fa fa-check"></i> Optimized Template</span> <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span>
                                   <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span> <span><i class="fa fa-check"></i> Optimized Template</span></div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt.</p>
@@ -294,9 +289,10 @@ https://templatemo.com/tm-568-digimedia
                           <div class="row">
                             <div class="col-lg-6 align-self-center">
                               <div class="left-text">
-                                <h4>Healthy Food &amp; Life</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt ut labore et dolore kengan darwin doerski token.
-                                  dover lipsum lorem and the others.</p>
+                                <h4>MarTech &amp; AdTech</h4>
+                                <p>Drive engagement with tech-forward strategies that connect, captivate, and convert.
+                                  MarTech and AdTech solutions designed to make every dollar work harder and every
+                                  impression last longer.</p>
                                 <div class="ticks-list"><span><i class="fa fa-check"></i> Optimized Template</span> <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span>
                                   <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span> <span><i class="fa fa-check"></i> Optimized Template</span></div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt.</p>
@@ -317,9 +313,9 @@ https://templatemo.com/tm-568-digimedia
                           <div class="row">
                             <div class="col-lg-6 align-self-center">
                               <div class="left-text">
-                                <h4>Car Re-search &amp; Transport</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt ut labore et dolore kengan darwin doerski token.
-                                  dover lipsum lorem and the others.</p>
+                                <h4>Impactful Learning &amp; User Enablement</h4>
+                                <p>Where learning meets impact. Through engaging simulations, interactive gaming, and
+                                  hands-on workshops, we turn knowledge into action and learners into leaders.</p>
                                 <div class="ticks-list"><span><i class="fa fa-check"></i> Optimized Template</span> <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span>
                                   <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span> <span><i class="fa fa-check"></i> Optimized Template</span></div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt.</p>
@@ -340,9 +336,9 @@ https://templatemo.com/tm-568-digimedia
                           <div class="row">
                             <div class="col-lg-6 align-self-center">
                               <div class="left-text">
-                                <h4>Online Shopping &amp; Tracking ID</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt ut labore et dolore kengan darwin doerski token.
-                                  dover lipsum lorem and the others.</p>
+                                <h4>Mentorship</h4>
+                                <p>Fueling the next generation of innovators through mentorship. We open doors, offer
+                                  guidance, and inspire the minds that will shape the future.</p>
                                 <div class="ticks-list"><span><i class="fa fa-check"></i> Optimized Template</span> <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span>
                                   <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span> <span><i class="fa fa-check"></i> Optimized Template</span></div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt.</p>
@@ -351,29 +347,6 @@ https://templatemo.com/tm-568-digimedia
                             <div class="col-lg-6 align-self-center">
                               <div class="right-image">
                                 <img src="assets/images/services-image-04.jpg" alt="">
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <div class="thumb">
-                          <div class="row">
-                            <div class="col-lg-6 align-self-center">
-                              <div class="left-text">
-                                <h4>Enjoy &amp; Travel</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt ut labore et dolore kengan darwin doerski token.
-                                  dover lipsum lorem and the others.</p>
-                                <div class="ticks-list"><span><i class="fa fa-check"></i> Optimized Template</span> <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span>
-                                  <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span> <span><i class="fa fa-check"></i> Optimized Template</span></div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt.</p>
-                              </div>
-                            </div>
-                            <div class="col-lg-6 align-self-center">
-                              <div class="right-image">
-                                <img src="assets/images/services-image.jpg" alt="">
                               </div>
                             </div>
                           </div>
@@ -619,7 +592,7 @@ https://templatemo.com/tm-568-digimedia
                       <div class="info-post">
                         <div class="icon">
                           <img src="assets/images/phone-icon.png" alt="">
-                          <a href="#">010-020-0340</a>
+                          <a href="#">+254 726 296744</a>
                         </div>
                       </div>
                     </div>
@@ -627,7 +600,7 @@ https://templatemo.com/tm-568-digimedia
                       <div class="info-post">
                         <div class="icon">
                           <img src="assets/images/email-icon.png" alt="">
-                          <a href="#">our@email.com</a>
+                          <a href="#">info@adaptai.tech</a>
                         </div>
                       </div>
                     </div>
@@ -635,7 +608,7 @@ https://templatemo.com/tm-568-digimedia
                       <div class="info-post">
                         <div class="icon">
                           <img src="assets/images/location-icon.png" alt="">
-                          <a href="#">123 Rio de Janeiro</a>
+                          <a href="#">Nairobi</a>
                         </div>
                       </div>
                     </div>
@@ -674,7 +647,7 @@ https://templatemo.com/tm-568-digimedia
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2022 DigiMedia Co., Ltd. All Rights Reserved. 
+          <p>Copyright © 2024 AdaptAI Co., Ltd. All Rights Reserved. 
           <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a></p>
         </div>
       </div>
