--- a/homepage_1.html
+++ b/homepage_1.html
@@ -111,7 +111,7 @@ https://templatemo.com/tm-568-digimedia
                 <div class="row">
                   <div class="col-lg-12">
                     <h6>AdaptAI</h6>
-                    <h2>We Provide Tailored AI Solutions for your Business</h2>
+                    <h2>Innovate Boldly. Impact Infinitely.</h2>
                     <p>In a world where innovation meets ambition, Adapt AI emerges as a trailblazer, igniting revolution in how businesses operate and individuals learn.</p>
                   </div>
                   <div class="col-lg-12">
