--- a/homepage_1.html
+++ b/homepage_1.html
@@ -112,11 +112,11 @@ https://templatemo.com/tm-568-digimedia
                   <div class="col-lg-12">
                     <h6>AdaptAI</h6>
                     <h2>Innovate Boldly. Impact Infinitely.</h2>
-                    <p>In a world where innovation meets ambition, Adapt AI emerges as a trailblazer, igniting revolution in how businesses operate and individuals learn.</p>
+                    <p class="fw-bold">In a world where innovation meets ambition, Adapt AI emerges as a trailblazer, igniting revolution in how businesses operate and individuals learn.</p>
                   </div>
                   <div class="col-lg-12">
                     <div class="border-first-button scroll-to-section">
-                      <a href="#contact">Free Quote</a>
+                      <a href="#about">Learn More</a>
                     </div>
                   </div>
                 </div>
@@ -150,63 +150,68 @@ https://templatemo.com/tm-568-digimedia
                   <h4>Who is <em>AdaptAI?</em></h4>
                   <div class="line-dec"></div>
                 </div>
-                <p>We hope this DigiMedia template is useful for your work. You can use this template for any purpose. You may <a rel="nofollow" href="http://paypal.me/templatemo" target="_blank">contribute a little amount</a> via PayPal to <a href="https://templatemo.com/contact" target="_blank">support TemplateMo</a> in creating new templates regularly.</p>
-                <div class="row">
-                  <div class="col-lg-4 col-sm-4">
-                    <div class="skill-item first-skill-item wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
-                      <div class="progress" data-percentage="90">
-                        <span class="progress-left">
-                          <span class="progress-bar"></span>
-                        </span>
-                        <span class="progress-right">
-                          <span class="progress-bar"></span>
-                        </span>
-                        <div class="progress-value">
-                          <div>
-                            90%<br>
-                            <span>Coding</span>
+                <p><span class="fw-bold">Vision:</span> Fuelling a future where AI meets ambition, sparking innovation and elevating every experience—one powerful interaction at a time.</p>
+                <p><span class="fw-bold">Mission:</span> Adapt AI is here to disrupt the ordinary. We design intelligent solutions that amplify business
+                  impact, create unforgettable experiences, and empower individuals. Through cutting-edge AI for
+                  business, standout MarTech and AdTech, immersive learning, and game-changing mentorship,we’re shaping a smarter, bolder world.</p>
+                  <!--
+                  <div class="row">
+                    <div class="col-lg-4 col-sm-4">
+                      <div class="skill-item first-skill-item wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
+                        <div class="progress" data-percentage="90">
+                          <span class="progress-left">
+                            <span class="progress-bar"></span>
+                          </span>
+                          <span class="progress-right">
+                            <span class="progress-bar"></span>
+                          </span>
+                          <div class="progress-value">
+                            <div>
+                              90%<br>
+                              <span>Coding</span>
+                            </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="col-lg-4 col-sm-4">
-                    <div class="skill-item second-skill-item wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
-                      <div class="progress" data-percentage="80">
-                        <span class="progress-left">
-                          <span class="progress-bar"></span>
-                        </span>
-                        <span class="progress-right">
-                          <span class="progress-bar"></span>
-                        </span>
-                        <div class="progress-value">
-                          <div>
-                            80%<br>
-                            <span>Photoshop</span>
+                    <div class="col-lg-4 col-sm-4">
+                      <div class="skill-item second-skill-item wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
+                        <div class="progress" data-percentage="80">
+                          <span class="progress-left">
+                            <span class="progress-bar"></span>
+                          </span>
+                          <span class="progress-right">
+                            <span class="progress-bar"></span>
+                          </span>
+                          <div class="progress-value">
+                            <div>
+                              80%<br>
+                              <span>Photoshop</span>
+                            </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="col-lg-4 col-sm-4">
-                    <div class="skill-item third-skill-item wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
-                      <div class="progress" data-percentage="80">
-                        <span class="progress-left">
-                          <span class="progress-bar"></span>
-                        </span>
-                        <span class="progress-right">
-                          <span class="progress-bar"></span>
-                        </span>
-                        <div class="progress-value">
-                          <div>
-                            80%<br>
-                            <span>Animation</span>
+                    <div class="col-lg-4 col-sm-4">
+                      <div class="skill-item third-skill-item wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
+                        <div class="progress" data-percentage="80">
+                          <span class="progress-left">
+                            <span class="progress-bar"></span>
+                          </span>
+                          <span class="progress-right">
+                            <span class="progress-bar"></span>
+                          </span>
+                          <div class="progress-value">
+                            <div>
+                              80%<br>
+                              <span>Animation</span>
+                            </div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </div> 
+                  </div> 
+                  -->
               </div>
             </div>
           </div>
@@ -220,8 +225,8 @@ https://templatemo.com/tm-568-digimedia
       <div class="row">
         <div class="col-lg-12">
           <div class="section-heading  wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
-            <h6>Our Services</h6>
-            <h4>Our Bold <em>Objectives</em></h4>
+            <!--<h6>What we do</h6> -->
+            <h4>What we <em>Do</em></h4>
             <div class="line-dec"></div>
           </div>
         </div>
@@ -399,7 +404,7 @@ https://templatemo.com/tm-568-digimedia
     </div>
   </div>
 
-
+  <!--
   <div id="portfolio" class="our-portfolio section">
     <div class="container">
       <div class="row">
@@ -486,7 +491,8 @@ https://templatemo.com/tm-568-digimedia
       </div>
     </div>
   </div>
-  
+  -->
+  <!--
   <div id="blog" class="blog">
     <div class="container">
       <div class="row">
@@ -560,7 +566,8 @@ https://templatemo.com/tm-568-digimedia
         </div>
       </div>
     </div>
-  </div>  
+  </div>
+  -->  
 
   <div id="contact" class="contact-us section">
     <div class="container">
@@ -580,12 +587,14 @@ https://templatemo.com/tm-568-digimedia
                   <img src="assets/images/contact-dec.png" alt="">
                 </div>
               </div>
+              <!--
               <div class="col-lg-5">
                 <div id="map">
                   <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="636px" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
               </div>
-              <div class="col-lg-7">
+              -->
+              <div class="col-lg-12">
                 <div class="fill-form">
                   <div class="row">
                     <div class="col-lg-4">
@@ -648,7 +657,6 @@ https://templatemo.com/tm-568-digimedia
       <div class="row">
         <div class="col-lg-12">
           <p>Copyright © 2024 AdaptAI Co., Ltd. All Rights Reserved. 
-          <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a></p>
         </div>
       </div>
     </div>
