--- a/homepage_1.html
+++ b/homepage_1.html
@@ -88,7 +88,7 @@ https://templatemo.com/tm-568-digimedia
               <li class="scroll-to-section"><a href="#portfolio">Projects</a></li>
               <li class="scroll-to-section"><a href="#blog">Blog</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact</a></li> 
-              <li class="scroll-to-section"><div class="border-first-button"><a href="#contact">Free Quote</a></div></li> 
+              <li class="scroll-to-section"><div class="border-first-button"><a href="#contact">Schedule</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
@@ -106,13 +106,14 @@ https://templatemo.com/tm-568-digimedia
       <div class="row">
         <div class="col-lg-12">
           <div class="row">
-            <div class="col-lg-6 align-self-center">
+            <div class="col-lg-8 align-self-center">
               <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
                   <div class="col-lg-12">
                     <h6>AdaptAI</h6>
-                    <h2>Innovate Boldly. Impact Infinitely.</h2>
-                    <p class="fw-bold">In a world where innovation meets ambition, Adapt AI emerges as a trailblazer, igniting revolution in how businesses operate and individuals learn.</p>
+                    <h2>Innovate Boldly.</h2>
+                    <h2>Impact Infinitely.</h2>
+                    <p class="">In a world where innovation meets ambition, Adapt AI emerges as a trailblazer, igniting revolution in how businesses operate and individuals learn.</p>
                   </div>
                   <div class="col-lg-12">
                     <div class="border-first-button scroll-to-section">
@@ -122,9 +123,9 @@ https://templatemo.com/tm-568-digimedia
                 </div>
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-4">
               <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
-                <img src="assets/images/slider-dec.png" alt="">
+                <img src="assets/images/undraw_Firmware_re_fgdy.png" alt="">
               </div>
             </div>
           </div>
@@ -138,12 +139,12 @@ https://templatemo.com/tm-568-digimedia
       <div class="row">
         <div class="col-lg-12">
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-4">
               <div class="about-left-image  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.5s">
                 <img src="assets/images/about-dec.png" alt="">
               </div>
             </div>
-            <div class="col-lg-6 align-self-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
+            <div class="col-lg-8 align-self-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
               <div class="about-right-content">
                 <div class="section-heading">
                   <h6>About Us</h6>
