Add training schedule

--- a/homepage_1.html
+++ b/homepage_1.html
@@ -369,7 +369,6 @@ https://templatemo.com/tm-568-digimedia
     </div>
   </div>
 
-  
   <div id="free-quote" class="free-quote">
     <div class="container">
       <div class="row">
@@ -403,6 +402,127 @@ https://templatemo.com/tm-568-digimedia
         </div>
       </div>
     </div>
+  </div>
+
+  <div id="schedule" class="container">
+    <table class="table table-bordered training-calendar">
+        <thead>
+            <tr>
+                <th colspan="6">2024/2025 Training Calender</th>
+            </tr>
+            <tr>
+                <th>Master class</th>
+                <th>Duration (Days)</th>
+                <th>Nov-Dec 2024</th>
+                <th>Jan-25</th>
+                <th>Feb-25</th>
+                <th>Mar-25</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>AI for Marketing & Advertising</td>
+                <td>3</td>
+                <td>2nd - 4th Dec</td>
+                <td></td>
+                <td>3rd-5th</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Journey to Cloud: what's at stake</td>
+                <td>2</td>
+                <td></td>
+                <td>20th - 21st</td>
+                <td>17th - 18th</td>
+                <td>17th - 18th</td>
+            </tr>
+            <tr>
+                <td>AI for Government: Adoption, Security & Innovation</td>
+                <td>3</td>
+                <td></td>
+                <td>22nd - 24th</td>
+                <td>19th - 21st</td>
+                <td>19th - 21st</td>
+            </tr>
+            <tr>
+                <td>Apex AI Master Class (Oracle)</td>
+                <td>2</td>
+                <td></td>
+                <td>20th - 21st</td>
+                <td>17th - 18th</td>
+                <td>17th - 18th</td>
+            </tr>
+            <tr>
+                <td>Governance Risk & Compliance Tools (Oracle)</td>
+                <td>3</td>
+                <td></td>
+                <td>27th - 29th</td>
+                <td></td>
+                <td>24th - 26th</td>
+            </tr>
+            <tr>
+                <td>Programmatic and Out-of-Home (OOH) Advertising</td>
+                <td>2</td>
+                <td>5th - 7th</td>
+                <td></td>
+                <td>6th - 7th</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Mastering Digital Transformation Project Management: Leveraging AI for Smarter Project Outcomes</td>
+                <td>3</td>
+                <td></td>
+                <td></td>
+                <td>24th - 26th</td>
+                <td></td>
+            </tr>
+        </tbody>
+        <thead>
+          <tr></tr>
+          <tr>
+              <th>Webinars</th>
+              <th>Duration</th>
+              <th>Nov-Dec 2024</th>
+              <th>Jan-25</th>
+              <th>Feb-25</th>
+              <th>Mar-25</th>
+          </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Transforming SaaS: Embedding AI for Smarter, Scalable Solutions</td>
+          <td>Free webinar 2 hours</td>
+          <td></td>
+          <td>15th</td>
+          <td></td>
+          <td>13th</td>
+        </tr>
+        <tr>
+          <td>Is Data the new oil for AI?</td>
+          <td>Free webinar 2 hours</td>
+          <td></td>
+          <td>15th</td>
+          <td></td>
+          <td>13th</td>
+        </tr>
+        <tr>
+          <td>The Future of Digital Marketing: Unpacking Trends, Tools and Techniques for Success</td>
+          <td>Free webinar 2 hours</td>
+          <td>19th Nov</td>
+          <td></td>
+          <td></td>
+          <td>13th</td>
+        </tr>
+        <tr>
+          <td>Marketing That Sells: Secrets to Creating Irresistible Campaigns That Drive Results</td>
+          <td>Free webinar 2 hours</td>
+          <td>19th Nov</td>
+          <td></td>
+          <td></td>
+          <td>13th</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 
   <!--
@@ -588,13 +708,6 @@ https://templatemo.com/tm-568-digimedia
                   <img src="assets/images/contact-dec.png" alt="">
                 </div>
               </div>
-              <!--
-              <div class="col-lg-5">
-                <div id="map">
-                  <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="636px" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>
-              </div>
-              -->
               <div class="col-lg-12">
                 <div class="fill-form">
                   <div class="row">
