--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@ https://templatemo.com/tm-568-digimedia
         <div class="col-lg-4 col-sm-4 col-5">
           <ul class="social-media">
             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-behance"></i></a></li>
             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
           </ul>
         </div>
       </div>
@@ -404,7 +402,7 @@ https://templatemo.com/tm-568-digimedia
     </div>
   </div>
 
-  <div id="schedule" class="container">
+  <div id="schedule" class="container table-responsive">
     <table class="table table-bordered training-calendar">
         <thead>
             <tr>
