--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ https://templatemo.com/tm-568-digimedia
           <div class="row">
             <div class="col-lg-4">
               <div class="about-left-image  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.5s">
-                <img src="assets/images/about-dec.png" alt="">
+                <img src="assets/images/About us.PNG" alt="">
               </div>
             </div>
             <div class="col-lg-8 align-self-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
@@ -236,25 +236,25 @@ https://templatemo.com/tm-568-digimedia
                     <div class="first-thumb active">
                       <div class="thumb">
                         <span class="icon"><img src="assets/images/AI Icon.png" alt=""></span>
-                        <p><b>AI Innovations</b></p>
+                        <p class="service-icons-text"><b>AI Innovations</b></p>
                       </div>
                     </div>
                     <div>
                       <div class="thumb">                 
                         <span class="icon"><img src="assets/images/martech icon.png" alt=""></span>
-                        <p><b>MarTech &amp; AdTech</b></p>
+                        <p class="service-icons-text"><b>MarTech &amp; AdTech</b></p>
                       </div>
                     </div>
                     <div>
                       <div class="thumb">                 
                         <span class="icon"><img src="assets/images/learning icon.png" alt=""></span>
-                        <p><b>Learning &amp; User Enablement</b></p>
+                        <p class="service-icons-text"><b>Learning &amp; User Enablement</b></p>
                       </div>
                     </div>
                     <div>
                       <div class="thumb">                 
                         <span class="icon"><img src="assets/images/mentorship icon.png" alt=""></span>
-                        <p><b>Mentorship</b></p>
+                        <p class="service-icons-text"><b>Mentorship</b></p>
                       </div>
                     </div>
                   </div>
