--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ https://templatemo.com/tm-568-digimedia
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div class="row">
+          <div class="row about-content">
             <div class="col-lg-4">
               <div class="about-left-image  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.5s">
                 <img src="assets/images/About us.PNG" alt="">
@@ -691,7 +691,7 @@ https://templatemo.com/tm-568-digimedia
                     <div class="col-lg-4">
                       <div class="info-post">
                         <div class="icon">
-                          <img src="assets/images/email-icon.png" alt="">
+                          <img src="assets/images/530.jpg" alt="">
                           <a href="#">info@adaptai.tech</a>
                         </div>
                       </div>
