--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ https://templatemo.com/tm-568-digimedia
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="assets/images/AdaptAILogo.png" alt="" class="">
+              <img src="assets/images/test-logo.jpeg" alt="" class="company-logo">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
@@ -239,13 +239,13 @@ https://templatemo.com/tm-568-digimedia
                         <p class="service-icons-text"><b>AI Innovations</b></p>
                       </div>
                     </div>
-                    <div>
+                    <div class="second-thumb">
                       <div class="thumb">                 
                         <span class="icon"><img src="assets/images/martech icon.png" alt=""></span>
                         <p class="service-icons-text"><b>MarTech &amp; AdTech</b></p>
                       </div>
                     </div>
-                    <div>
+                    <div class="third-thumb">
                       <div class="thumb">                 
                         <span class="icon"><img src="assets/images/learning icon.png" alt=""></span>
                         <p class="service-icons-text"><b>Learning &amp; User Enablement</b></p>
@@ -352,7 +352,7 @@ https://templatemo.com/tm-568-digimedia
       </div>
     </div>
   </div>
-
+  <!--
   <div id="free-quote" class="free-quote">
     <div class="container">
       <div class="row">
@@ -385,6 +385,7 @@ https://templatemo.com/tm-568-digimedia
       </div>
     </div>
   </div>
+  -->
 
   <div id="schedule" class="container table-responsive">
     <table class="table table-bordered training-calendar">
