--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ https://templatemo.com/tm-568-digimedia
         </div>
         <div class="col-lg-4 col-sm-4 col-5">
           <ul class="social-media">
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href=" https://web.facebook.com/profile.php?id=61571613915802"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://www.linkedin.com/company/106140076/admin/dashboard/"><i class="fa fa-linkedin"></i></a></li>
           </ul>
         </div>
       </div>
