--- a/index.html
+++ b/index.html
@@ -424,14 +424,14 @@ https://templatemo.com/tm-568-digimedia
                 <td>19th - 21st</td>
             </tr>
             <tr>
-                <td>Apex AI Master Class (Oracle)</td>
+                <td>Apex AI Master Class</td>
                 <td>2</td>
                 <td>20th - 21st</td>
                 <td>17th - 18th</td>
                 <td>17th - 18th</td>
             </tr>
             <tr>
-                <td>Governance Risk & Compliance Tools (Oracle)</td>
+                <td>Governance Risk & Compliance Tools</td>
                 <td>3</td>
                 <td>27th - 29th</td>
                 <td></td>
