Update contact details

--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@ https://templatemo.com/tm-568-digimedia
         <div class="col-lg-8 col-sm-8 col-7">
           <ul class="info">
             <li><a href="#"><i class="fa fa-envelope"></i>info@adaptai.tech</a></li>
-            <li><a href="#"><i class="fa fa-phone"></i>+254 726 296744</a></li>
+            <li><a href="#"><i class="fa fa-phone"></i>+254 702 228 713</a></li>
           </ul>
         </div>
         <div class="col-lg-4 col-sm-4 col-5">
           <ul class="social-media">
             <li><a href=" https://web.facebook.com/profile.php?id=61571613915802"><i class="fa fa-facebook"></i></a></li>
             <li><a href="https://www.linkedin.com/company/106140076/admin/dashboard/"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://wa.me/+254702228713"><i class="fa fa-whatsapp"></i></a></li>
           </ul>
         </div>
       </div>
@@ -473,7 +474,7 @@ https://templatemo.com/tm-568-digimedia
         <tr>
           <td>Transforming SaaS: Embedding AI for Smarter, Scalable Solutions</td>
           <td>Free webinar 2 hours</td>
-          <td>/td>
+          <td></td>
           <td>8th</td>
           <td>9th</td>
         </tr>
@@ -692,7 +693,7 @@ https://templatemo.com/tm-568-digimedia
                       <div class="info-post">
                         <div class="icon">
                           <img src="assets/images/phone-icon.png" alt="">
-                          <a href="#">+254 726 296744</a>
+                          <a href="#">+254 702 228 713</a>
                         </div>
                       </div>
                     </div>
